--- a/style.css
+++ b/style.css
@@ -124,7 +124,9 @@ nav{
 main{
     grid-area: main;
     height: 100%;
-    background-color: #C5D86D;
+    background-color: #5f6836;
+    /* Background color*/
+    background: linear-gradient(to bottom, #C5D86D, #5f6836);
 }
 
 
@@ -135,6 +137,19 @@ main{
     width: 20rem;
     height: 20rem;
     margin: 2rem;
+}
+
+.hover__img{
+    animation: hoverImg__index;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-play-state: running;
+    box-shadow: black 20px;
+}
+
+.hover__img:hover{
+    transition: all 0.40s;
+    transform: translateY(-10px);
 }
 
 .mainIndex{
@@ -150,7 +165,26 @@ main{
     display: grid;
     flex-direction: column;
     justify-items: center;
+    position: relative;
     padding: 2rem;
+
+    /* Animation */
+    animation-name: entra_izquierda;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 1.2s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes entra_izquierda {
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
 }
 
 .mainIndex__text{
@@ -177,6 +211,118 @@ main{
     padding: 2rem;
     font-size: 16px;
 }
+
+.mainPrestadores__title{
+    position: relative;
+
+        /* Animation */
+    animation-name: entra_izquierda__prest;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 1s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes entra_izquierda__prest {
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+.mainPrestadores__p--1{
+    position: relative;
+
+        /* Animation */
+    animation-name: entra_izquierda2;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 1.5s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes entra_izquierda2 {
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+.mainPrestadores__ul--1{
+    position: relative;
+
+        /* Animation */
+    animation-name: entra_izquierda3;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 1.8s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes entra_izquierda3 {
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+.mainPrestadores__p--2{
+    position: relative;
+
+        /* Animation */
+    animation-name: entra_izquierda4;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 2s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes entra_izquierda4 {
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+.mainPrestadores__ul--2{
+    position: relative;
+
+        /* Animation */
+    animation-name: entra_izquierda5;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 2.3s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes entra_izquierda5 {
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+
 
 .mainPrestadores__img{
     width: 16rem;
@@ -286,6 +432,133 @@ main{
     width: 20rem;
     height: 15rem;
     margin: 2rem;
+}
+
+.mainNosotros__img--1{
+    position: relative;
+        /* Animation */
+    animation-name: izquierda_img;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 2s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes izquierda_img{
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+
+.mainNosotros__textContainer--1{
+    position: relative;
+        /* Animation */
+    animation-name: text__nosotros--1;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 2s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes text__nosotros--1{
+    0% { 
+        left: 300%;
+    }
+
+    100% { 
+        left: 0%;
+    }
+}
+
+.mainNosotros__img--2{
+    position: relative;
+        /* Animation */
+    animation-name: derecha_img--2;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 4s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes derecha_img--2{
+    0% { 
+        left: 300%;
+    }
+
+    100% { 
+        left: 0%;
+    }
+}
+
+.mainNosotros__textContainer--2{
+    position: relative;
+        /* Animation */
+    animation-name: text__nosotros--2;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 4s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes text__nosotros--2{
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+.mainNosotros__img--3{
+    position: relative;
+        /* Animation */
+    animation-name: izquierda_img--3;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 6s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes izquierda_img--3{
+    0% { 
+        right: 300%;
+    }
+
+    100% { 
+        right: 0%;
+    }
+}
+
+.mainNosotros__textContainer--3{
+    position: relative;
+        /* Animation */
+    animation-name: text__nosotros--3;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 6s;
+    animation-delay: 0;
+    overflow: hidden;
+}
+
+@keyframes text__nosotros--3{
+    0% { 
+        left: 300%;
+    }
+
+    100% { 
+        left: 0%;
+    }
 }
 
 /*  Main contacto especificos */
@@ -438,7 +711,6 @@ footer{
     .mainIndex{
         display: flex;
         flex-direction: row;
-        background-color: #C5D86D;
         justify-content: space-between;
         align-content: center;
         align-items: center;
@@ -513,6 +785,10 @@ footer{
 
     .labelForm__asoc{
         align-self: flex-start;
+    }
+
+    .mainAsociarse{
+        height: 60vh;
     }
 
     /* Nosotros Media Querys */
