Sass agregado y modificaciones leves

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,7 +112,7 @@
 .mainNosotros__textContainer--1{
     position: relative;
         /* Animation */
-    animation-name: entra_izquierda;
+    animation-name: entra_derecha;
     animation-iteration-count: 1;
     animation-timing-function: ease-out;
     animation-duration: 2s;
