--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,9 @@
+$main-color:rgba(36, 149, 55, 0.934);
+
+main{
+    background: linear-gradient(to top, rgba(36, 149, 55, 0.934), rgba(61, 255, 93, 0.934));
+}
+
 /* Animaciones */
 .mainIndex__text--title{
     position: relative;
@@ -186,4 +192,17 @@
     100% { 
         left: 0%;
     }
+}
+
+.hover__img{
+    animation: hoverImg__index;
+    animation-duration: 2s;
+    animation-delay: 0;
+    animation-play-state: running;
+    box-shadow: black 20px;
+}
+
+.hover__img:hover{
+    transition: all 0.40s;
+    transform: translateY(-10px);
 }
