--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,208 +1,3 @@
-$main-color:rgba(36, 149, 55, 0.934);
+@import "globales";
+@import "animaciones";
 
-main{
-    background: linear-gradient(to top, rgba(36, 149, 55, 0.934), rgba(61, 255, 93, 0.934));
-}
-
-/* Animaciones */
-.mainIndex__text--title{
-    position: relative;
-    /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 1.2s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-.mainIndex__text{
-    position: relative;
-    /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 2.0s;
-    animation-delay: 0s;
-    overflow: hidden;
-}
-
-.mainPrestadores__title{
-    position: relative;
-     /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 1s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-.mainPrestadores__p--1{
-    position: relative;
-    /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 1.5s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-.mainPrestadores__p--1{
-    position: relative;
-
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 1.5s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-.mainPrestadores__ul--1{
-    position: relative;
-
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 1.8s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-.mainPrestadores__p--2{
-    position: relative;
-
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 2s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-.mainPrestadores__ul--2{
-    position: relative;
-
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 2.3s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-
-/* Animaciones nosotros */ 
-
-.mainNosotros__img--1{
-    position: relative;
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 2s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-.mainNosotros__textContainer--1{
-    position: relative;
-        /* Animation */
-    animation-name: entra_derecha;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 2s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-
-.mainNosotros__img--2{
-    position: relative;
-        /* Animation */
-    animation-name: entra_derecha;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 4s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-.mainNosotros__textContainer--2{
-    position: relative;
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 4s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-.mainNosotros__img--3{
-    position: relative;
-        /* Animation */
-    animation-name: entra_izquierda;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 6s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-
-.mainNosotros__textContainer--3{
-    position: relative;
-        /* Animation */
-    animation-name: entra_derecha;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-duration: 6s;
-    animation-delay: 0;
-    overflow: hidden;
-}
-
-@keyframes entra_izquierda {
-    0% { 
-        right: 300%;
-    }
-
-    100% { 
-        right: 0%;
-    }
-}
-
-@keyframes entra_derecha{
-    0% { 
-        left: 300%;
-    }
-
-    100% { 
-        left: 0%;
-    }
-}
-
-.hover__img{
-    animation: hoverImg__index;
-    animation-duration: 2s;
-    animation-delay: 0;
-    animation-play-state: running;
-    box-shadow: black 20px;
-}
-
-.hover__img:hover{
-    transition: all 0.40s;
-    transform: translateY(-10px);
-}
