--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,21 @@
-@import "globales";
+@import "bootstrap"; 
+@import "variables";
 @import "animaciones";
+@import "mixins";
 
+
+
+main{
+    background: linear-gradient(to top, rgba(192, 189, 170, 0.933), $main-color);
+}
+
+.header__title{
+    font-size: 4rem;
+    font-weight: bold;
+}
+
+.footer__redes{
+    @mixin flex-row-center {
+        justify-content: space-between
+    };
+}
