Aplicacion de Seo y Sass II cambios en Bootstrap

--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -1,6 +1,22 @@
 
+/* Cambios a Bootstrap */
 
+$font-family-sans-serif: 'Roboto', sans-serif;
+
+$h1-font-size: 5rem;
+
+$blue: rgba(169, 169, 169, 0.687);
+
+$container-max-widths: (
+    sm: 580px,
+    md: 780px,
+    lg: 1040px,
+    xl: 1280px,
+    xxl: 1410px,
+);
+
+$enable-shadows: true;
 
 
 /* Import de Bootstrap*/ 
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
