--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,18 +4,35 @@
 @import "mixins";
 
 
-
 main{
-    background: linear-gradient(to top, rgba(192, 189, 170, 0.933), $main-color);
+    background: $main-color;
 }
 
+
 .header__title{
-    font-size: 4rem;
     font-weight: bold;
 }
 
-.footer__redes{
-    @mixin flex-row-center {
-        justify-content: space-between
-    };
+$mapcolors: (
+    color1: rgb(0, 0, 0),
+    color2: rgba(198, 195, 195, 0.797),
+    color3: rgba(227, 226, 226, 0.722),
+    color4: rgba(231, 231, 231, 0.893),
+    color5: rgba(193, 193, 193, 0.826)
+);
+
+body{
+    background-color: map-get($mapcolors, "color2");
+}
+
+header{
+    background-color: map-get($mapcolors, "color3");
+}
+
+nav{
+    background-color: map-get($mapcolors, "color4");
+}
+
+footer{
+    background-color: map-get($mapcolors, "color5");
 }
