Cambios en sass, colores y contenedores

--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -5,15 +5,8 @@ $font-family-sans-serif: 'Roboto', sans-serif;
 
 $h1-font-size: 5rem;
 
-$blue: rgba(169, 169, 169, 0.687);
-
-$container-max-widths: (
-    sm: 580px,
-    md: 780px,
-    lg: 1040px,
-    xl: 1280px,
-    xxl: 1410px,
-);
+$blue: rgba(58, 198, 233, 0.474);
+$green:   #8338ec;
 
 $enable-shadows: true;
 
