--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,37 +2,10 @@
 @import "variables";
 @import "animaciones";
 @import "mixins";
+@import "colors";
 
-
-main{
-    background: $main-color;
-}
 
 
 .header__title{
     font-weight: bold;
-}
-
-$mapcolors: (
-    color1: rgb(0, 0, 0),
-    color2: rgba(198, 195, 195, 0.797),
-    color3: rgba(227, 226, 226, 0.722),
-    color4: rgba(231, 231, 231, 0.893),
-    color5: rgba(193, 193, 193, 0.826)
-);
-
-body{
-    background-color: map-get($mapcolors, "color2");
-}
-
-header{
-    background-color: map-get($mapcolors, "color3");
-}
-
-nav{
-    background-color: map-get($mapcolors, "color4");
-}
-
-footer{
-    background-color: map-get($mapcolors, "color5");
 }
